# ChessBot

./: .gitignore  CMakeLists.txt  README.md  image.py  mainwindow.ui  online.ui  pieces.py  rc_chessbot.qrc
ai/: dataset.py  inference.py  model.py  train.py  utils.py
include/: block.h  bot.h  button.h  client.h  game.h  main.h  mainUi.h  mainwindow.h  model.h  move.h  pieces.h  player.h  server.h  ui.h  utils.h
src/: block.cpp  bot.cpp  button.cpp  client.cpp  data.cpp  game.cpp  isCheckmate.txt  main.cpp  mainUi.cpp  mainwindow.cpp  model.cpp  pieces.cpp  player.cpp  server.cpp  ui.cpp  utils.cpp
